--- a/index.html
+++ b/index.html
@@ -12,42 +12,62 @@
 </head>
 <body >
     <header class="colorcabecera">
-        <a href="#"><img src="./imagenes/logotupac.png" alt="logo tupac"></a>
+        <a href="#"><img src="./imagenes/LOGO TUPAC.png" alt="logo tupac" class="tamañologo"></a>
         <h1>Tupac</h1>
+        <h2 class="Subtitulo">Indumentaria - Hombre</h2>
         <h2>Inicio</h2>
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="./paginas/contacto.html">Contacto</a></li>
-                <li><a href="./paginas/galeria.html">Galeria</a></li>
-                <li><a href="./paginas/quienes-somos.html">Quienes somos</a></li>
-                <li><a href="./paginas/ubicacion.html">Ubicacion</a></li>
+            <ul class="encabezado__lista">
+                <li class="encabezado__lista__item"><a href="#">Home</a></li>
+                <li class="encabezado__lista__item"><a href="./paginas/contacto.html">Contacto</a></li>
+                <li class="encabezado__lista__item"><a href="./paginas/galeria.html">Galeria</a></li>
+                <li class="encabezado__lista__item"><a href="./paginas/quienes-somos.html">Quienes somos</a></li>
+                <li class="encabezado__lista__item"><a href="./paginas/ubicacion.html">Ubicacion</a></li>
             </ul>
         </nav>
     </header>
-        <main>
-            <section>
-                <img src="./imagenes/imagen1.jpg" alt="foto jogger 1">
-                <img src="./imagenes/imagen2.jpg" alt="foto jogger 2">
-                <img src="./imagenes/imagen3.jpg" alt="foto jogger 3">
-                <p class="colorParrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa labore ut, aspernatur fugit magnam rem perferendis, dolores quod libero vero repudiandae sint ipsa ullam, aliquid cumque eveniet rerum! Saepe, quos.
-                Eum sapiente aperiam quisquam dolorem exercitationem praesentium, doloremque placeat incidunt quaerat itaque animi dignissimos assumenda eaque in cum laudantium numquam similique quos repellendus natus quasi qui eligendi! Excepturi, asperiores libero.
-                Ipsa dolorem illo architecto sunt odit quam labore velit veritatis maxime iste autem dicta commodi corporis doloremque voluptatem exercitationem minima rerum, voluptate porro nam consequuntur assumenda, nesciunt consequatur cupiditate! Nostrum.
-                Repellat aut in voluptatum aspernatur vel omnis molestiae quos itaque reiciendis sequi quaerat expedita, ipsa libero ea dicta quo nostrum! Quaerat sequi accusamus rem doloribus id? Impedit dicta dolores error.
-                Modi fugit optio, eum et voluptate dignissimos perferendis minima accusamus doloremque deleniti odio totam, quam doloribus officia quas libero. Veritatis soluta unde inventore rerum quia, saepe dolorem tempora nihil animi.</p>
+        <main class="fondopantalla">
+            <section class="foto__index">
+                    <div class="foto__index__imagen">
+                        <img src="./imagenes/imagen1.jpg" class="foto__index__imagen__1" alt="foto jogger 1" >
+                    </div>
+                    <div class="foto__index__imagen">
+                        <img src="./imagenes/imagen2.jpg" class="foto__index__imagen__1" alt="foto jogger 2" >
+                    </div>
+                    <div class="foto__index__imagen">
+                        <img src="./imagenes/galeria2.jpg"  class="foto__index__imagen__1"  alt="foto jogger 3">
+                    </div>
+                    <div>
+                        <p class="colorParrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa labore ut, aspernatur fugit magnam rem perferendis, dolores quod libero vero repudiandae sint ipsa ullam, aliquid cumque eveniet rerum! Saepe, quos.
+                        Eum sapiente aperiam quisquam dolorem exercitationem praesentium, doloremque placeat incidunt quaerat itaque animi dignissimos assumenda eaque in cum laudantium numquam similique quos repellendus natus quasi qui eligendi! Excepturi, asperiores libero.
+                        Ipsa dolorem illo architecto sunt odit quam labore velit veritatis maxime iste autem dicta commodi corporis doloremque voluptatem exercitationem minima rerum, voluptate porro nam consequuntur assumenda, nesciunt consequatur cupiditate! Nostrum.
+                        Repellat aut in voluptatum aspernatur vel omnis molestiae quos itaque reiciendis sequi quaerat expedita, ipsa libero ea dicta quo nostrum! Quaerat sequi accusamus rem doloribus id? Impedit dicta dolores error.
+                        Modi fugit optio, eum et voluptate dignissimos perferendis minima accusamus doloremque deleniti odio totam, quam doloribus officia quas libero. Veritatis soluta unde inventore rerum quia, saepe dolorem tempora nihil animi.
+                        </p>
+                </div>
+            
             </section>
-            <section>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/uA7h6Tq5xJQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay></iframe>>
+            <section  class="video_index">
+                <iframe width="700" height="250" src="https://www.youtube.com/embed/uA7h6Tq5xJQ" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay></iframe>>
             </section>
 
         </main>
 
     <footer class="colorpiepagina">
-        <ul> 
-            <li><a href="https://www.facebook.com/Tupac" target="_blank"><img src="./imagenes/facebook-logo.jpg" alt="Facebook"></a></li>
-            <li><a href="https://www.instagram.com/Tupac"target="_blank"><img src="./imagenes/instagram-logo.jpg" alt="Instagram"></a></li>
-            <li><a href="https://www.outlook.live.com/"target="_blank"><img src="./imagenes/correo-logo.jpg" alt="Correo"></a></li>
-        </ul>
+        <div>
+           <p class="colorParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero saepe quaerat incidunt et consequatur nesciunt tempora nulla rerum laudantium vitae quidem delectus optio officia sequi enim rem, ducimus reprehenderit.</p>
+        </div>
+            <h3>REDES SOCIALES</h3>
+         <nav>
+            <ul class="pie_pagina"> 
+                <li class="pie_pagina_item"><a href="https://www.facebook.com/Tupac" target="_blank"><img src="./imagenes/icono_facebook.png" alt="Facebook" class="facebook"></a></li>
+                <li class="pie_pagina_item"><a href="https://www.instagram.com/Tupac"target="_blank"><img src="./imagenes/icono_instagram.png" alt="Instagram" class="instagram"></a></li>
+                <li class="pie_pagina_item"><a href="https://www.outlook.live.com/"target="_blank"><img src="./imagenes/icono_correo.png" alt="Correo" class="correo"></a></li>
+            </ul>
+                <a href="https://whatsapp.com" target="_blank">
+                    <img src="./imagenes/logowhatsapp.png" alt="logo whatsapp" class="whatsapp">
+                </a>
+        </nav>
     </footer>
     
 </body>
