--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -12,26 +12,25 @@
 </head>
 <body>
     <header class="colorcabecera">
-        <a href="../index.html"><img src="../imagenes/logotupac.png" alt="logo tupac"></a>
+        <a href="../index.html"><img src="../imagenes/LOGO TUPAC.png"alt="logo tupac" class="tamañologo"></a>
         <h1>Tupac</h1>
+        <h2 class="Subtitulo">Indumentaria - Hombre</h2>
         <h2>Contacto</h2>
         <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="./galeria.html">Galeria</a></li>
-                <li><a href="./quienes-somos.html">Quienes somos</a></li>
-                <li><a href="./ubicacion.html">Ubicacion</a></li>
+            <ul class="encabezado__lista">
+                <li class="encabezado__lista__item"><a href="../index.html">Home</a></li>
+                <li class="encabezado__lista__item"><a href="#">Contacto</a></li>
+                <li class="encabezado__lista__item"><a href="./galeria.html">Galeria</a></li>
+                <li class="encabezado__lista__item"><a href="./quienes-somos.html">Quienes somos</a></li>
+                <li class="encabezado__lista__item""><a href="./ubicacion.html">Ubicacion</a></li>
             </ul>
         </nav>
     </header>
-         <main class="colorfondopantalla">
-             <section >
-                 <img src="../imagenes/logotupac.png" alt="logo tupac">
-             </section>
+         <main class="fondopantalla">
+         
              <section class="colorContacto">
                  
-                 <form >
+                 <form class="formulario__item">
                      <div>
                         <label for="Nombre Completo">Nombre Completo</label>
                         <input type="text" placeholder="Nombre Completo" required>
@@ -62,11 +61,21 @@
             </section>
         </main>
      <footer class="colorpiepagina">
-         <ul>
-             <li><a href="https://www.facebook.com/Tupac"target="_blank"><img src="../imagenes/facebook-logo.jpg" alt="Facebook"></a></li>
-             <li><a href="https://www.instagram.com/Tupac"target="_blank"><img src="../imagenes/instagram-logo.jpg" alt="Instagram"></a></li>
-             <li><a href="https://www.outlook.live.com/Tupac"target="_blank"><img src="../imagenes/correo-logo.jpg" alt="Correo"></a></li>
-        </ul>
+        <div>
+            <p class="colorParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero saepe quaerat incidunt et consequatur nesciunt tempora nulla rerum laudantium vitae quidem delectus optio officia sequi enim rem, ducimus reprehenderit.
+             </p>  
+         </div>
+         <h3>REDES SOCIALES</h3>
+        <nav>
+             <ul class="pie_pagina">
+                <li class="pie_pagina_item"><a href="https://www.facebook.com/Tupac"target="_blank"><img src="../imagenes/icono_facebook.png" alt="Facebook" class="facebook"></a></li>
+                <li class="pie_pagina_item"><a href="https://www.instagram.com/Tupac"target="_blank"><img src="../imagenes/icono_instagram.png" alt="Instagram" class="instagram"></a></li>
+                <li class="pie_pagina_item"><a href="https://www.outlook.live.com/Tupac"target="_blank"><img src="../imagenes/icono_correo.png" alt="Correo" class="correo"></a></li>
+            </ul>
+                  <a href="https://whatsapp.com" target="_blank">
+                    <img src="../imagenes/logowhatsapp.png"  alt="logo whatsapp" class="whatsapp">
+                 </a>
+        </nav>
     </footer>
 </body>
 </html>
