--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fascinate&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Tupac</title>
 </head>
 <body >
     <header class="colorcabecera">
-        <a href="#"><img src="./imagenes/LOGO TUPAC.png" alt="logo tupac" class="tamañologo"></a>
-        <h1>Tupac</h1>
-        <h2 class="Subtitulo">Indumentaria - Hombre</h2>
-        <h2>Inicio</h2>
+        <a href="#"><img src="./imagenes/LOGO LUCKY.png" alt="logo lucky" class="tamañologo"></a>
+        <h1>LUCKY</h1>
+        <h2 class="Subtitulo animate__animated animate__bounce">Indumentaria - Hombre</h2>
+        <h2 >Inicio</h2>
         <nav>
             <ul class="encabezado__lista">
                 <li class="encabezado__lista__item"><a href="#">Home</a></li>
@@ -60,8 +61,8 @@
             <h3>REDES SOCIALES</h3>
          <nav>
             <ul class="pie_pagina"> 
-                <li class="pie_pagina_item"><a href="https://www.facebook.com/Tupac" target="_blank"><img src="./imagenes/icono_facebook.png" alt="Facebook" class="facebook"></a></li>
-                <li class="pie_pagina_item"><a href="https://www.instagram.com/Tupac"target="_blank"><img src="./imagenes/icono_instagram.png" alt="Instagram" class="instagram"></a></li>
+                <li class="pie_pagina_item"><a href="https://www.facebook.com/lucky" target="_blank"><img src="./imagenes/icono_facebook.png" alt="Facebook" class="facebook"></a></li>
+                <li class="pie_pagina_item"><a href="https://www.instagram.com/lucky"target="_blank"><img src="./imagenes/icono_instagram.png" alt="Instagram" class="instagram"></a></li>
                 <li class="pie_pagina_item"><a href="https://www.outlook.live.com/"target="_blank"><img src="./imagenes/icono_correo.png" alt="Correo" class="correo"></a></li>
             </ul>
                 <a href="https://whatsapp.com" target="_blank">
