realice todos los cambios en main

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <img src="./imagenes/imagen2.jpg" class="foto__index__imagen__1" alt="foto jogger 2" >
                     </div>
                     <div class="foto__index__imagen">
-                        <img src="./imagenes/galeria2.jpg"  class="foto__index__imagen__1"  alt="foto jogger 3">
+                        <img src="./imagenes/imagen3.jpg"  class="foto__index__imagen__1"  alt="foto jogger 3">
                     </div>
                     <div>
                         <p class="colorParrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa labore ut, aspernatur fugit magnam rem perferendis, dolores quod libero vero repudiandae sint ipsa ullam, aliquid cumque eveniet rerum! Saepe, quos.
