agregue boostrap en index

--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fascinate&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../style.css">
-    <title>Tupac | Galeria </title>
+    <title>lucky | Galeria </title>
 </head>
 <body>
     <header class="colorcabecera">
@@ -78,5 +78,6 @@
                     </a>
             </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 </body>
 </html>
