--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -53,29 +53,29 @@
             <section class="galeria">
 
                 <div class="galeria__imagen">
-                    <img src="../imagenes/galeria1.jpg" class="galeria__imagen__jogger"  alt="jogger1">
+                    <img src="../imagenes/galeria1.jpg" class="galeria__imagen__jogger img-fluid"  alt="jogger1">
                     <p class="galeria__imagen__texto">Lorem ipsum dolor sit amet. </p>
                 </div> 
                 <div class="galeria__imagen">
-                    <img src="../imagenes/galeria2.jpg" class="galeria__imagen__jogger" alt="jogger2">
+                    <img src="../imagenes/galeria2.jpg" class="galeria__imagen__jogger img-fluid" alt="jogger2">
                     <p class="galeria__imagen__texto">Lorem ipsum dolor sit amet. </p>
                 </div>
 
                 <div class="galeria__imagen" >
-                    <img src="../imagenes/galeria3.jpg" class="galeria__imagen__jogger"  alt="jogger3">
+                    <img src="../imagenes/galeria3.jpg" class="galeria__imagen__jogger img-fluid"  alt="jogger3">
                     <p class="galeria__imagen__texto">Lorem ipsum dolor sit amet. </p>
                 </div>
                 <div class="galeria__imagen">
-                    <img src="../imagenes/galeria4.jpg" class="galeria__imagen__jogger"  alt="jogger4">
+                    <img src="../imagenes/galeria4.jpg" class="galeria__imagen__jogger img-fluid"  alt="jogger4">
                     <p class="galeria__imagen__texto">Lorem ipsum dolor sit amet. </p>
                 </div>
 
                 <div class="galeria__imagen">
-                    <img src="../imagenes/galeria5.jpg" class="galeria__imagen__jogger" alt="jogger5">
+                    <img src="../imagenes/galeria5.jpg" class="galeria__imagen__jogger img-fluid" alt="jogger5">
                     <p class="galeria__imagen__texto">Lorem ipsum dolor sit amet. </p>
                 </div>
                 <div class="galeria__imagen">
-                    <img src="../imagenes/galeria6.jpg" class="galeria__imagen__jogger" alt="jogger6">
+                    <img src="../imagenes/galeria6.jpg" class="galeria__imagen__jogger img-fluid" alt="jogger6">
                     <p class="galeria__imagen__texto">Lorem ipsum dolor sit amet. </p>
                 </div>
                 
@@ -104,6 +104,7 @@
                 </ul>
             </footer>
           </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
 </html>
