--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -53,20 +53,26 @@
     <main class="fondopantalla">
         <section >
            
-                <div class="grid__item1">
-                    <img src="../imagenes/showroom.jpg" class="imagen__somos" alt="showroom">
+                <div>
+                    <img src="../imagenes/showroom.jpg" class="imagen__somos img-fluid " alt="showroom">
+                </div>
+                <div>
+                    <p class="colorParrafo text-center" >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora quo unde qui enim repudiandae tenetur possimus temporibus veritatis natus quia quos odio, neque omnis iure veniam ipsa aperiam animi atque?
+                     </p>
+                </div>
+
+                 <div >
+                    <img src="../imagenes/showroom1.jpg" class="imagen__somos img-fluid" alt="showroom">
+                </div>
+                <div>
                     <p class="colorParrafo" >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora quo unde qui enim repudiandae tenetur possimus temporibus veritatis natus quia quos odio, neque omnis iure veniam ipsa aperiam animi atque?
                      </p>
                 </div>
 
-                 <div class="grid__item2">
-                    <img src="../imagenes/showroom1.jpg" class="imagen__somos" alt="showroom">
-                    <p class="colorParrafo" >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora quo unde qui enim repudiandae tenetur possimus temporibus veritatis natus quia quos odio, neque omnis iure veniam ipsa aperiam animi atque?
-                     </p>
+                <div>
+                    <img src="../imagenes/team.jpg" class="imagen__somos img-fluid" alt="equipo de trabajo">
                 </div>
-
-                <div class="grid__item3">
-                    <img src="../imagenes/team.jpg" class="imagen__somos" alt="equipo de trabajo">
+                <div>
                     <p class="colorParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis qui explicabo tempora quam blanditiis, officia, repudiandae eius totam rem repellendus magnam eaque cumque dolores ipsum incidunt ratione odit praesentium? Vitae?
                     </p>
                 </div>
@@ -96,7 +102,8 @@
             </ul>
         </footer>
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
 </html>
                 
