--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -87,7 +87,7 @@
             <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
               
             </a>
-            <span class="mb-3 mb-md-0 text-muted">&copy; 2022 LUCKY - Indumentaria Hombre </span>
+            <span class="mb-3 mb-md-0 text-muted">&copy; 2022 LUCKY - Indumentaria Hombre. Todos los derechos reservados. </span>
           </div>
       
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
