cambie nombre a la marca y fondo de pantalla

--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
-    <title>lucky | Quienes somos</title>
+    <title> Lobo | Quienes somos</title>
 </head>
 <body>
     <!-- Estos son los iconos de las redes sociales como vectores svg -->
@@ -30,10 +30,10 @@
   
       <!-- Estos son los iconos de las redes sociales como vectores svg -->
     <header class="colorcabecera">
-        <a href="#"><img src="../imagenes/LOGO LUCKY.png" alt="logo lucky" class="tamañologo"></a>
+        <a href="../index.html"><img src="../imagenes/LOGO LUCKY.png" alt="logo lucky" class="tamañologo"></a>
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">LUCKY</a>
+            <a class="navbar-brand" href="#">L O B O</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -87,7 +87,7 @@
             <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
               
             </a>
-            <span class="mb-3 mb-md-0 text-muted">&copy; 2022 LUCKY - Indumentaria Hombre. Todos los derechos reservados. </span>
+            <span class="mb-3 mb-md-0 text-muted">&copy; 2022 LOBO - Indumentaria Hombre. Todos los derechos reservados. </span>
           </div>
       
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
