--- a/paginas/ubicacion.html
+++ b/paginas/ubicacion.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fascinate&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Lobo | Ubicacion </title>
 </head>
 <body>
@@ -57,8 +57,11 @@
                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.1165316587458!2d-64.19964308530749!3d-31.38335020179407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943298f82bdba355%3A0x9b0a51f0d8d0bb6c!2sG%C3%B3mez%20Pereira%202554%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1655145676727!5m2!1ses-419!2sar" class="tamaño_mapa img-fluid" width="100%" height="auto" frameborder="1" style="border:1" allowfullscreen></iframe>></iframe>
                   
                     <p class="colorParrafo ">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vitae amet nesciunt quod, quas similique dicta minima sapiente, excepturi iure cumque! Ducimus harum cumque minus ab obcaecati incidunt, placeat vero!
-                    Harum at nam laudantium nihil officia deleniti obcaecati maiores, reiciendis molestias perspiciatis. Facilis quod voluptatum recusandae nobis, nesciunt harum architecto soluta animi in voluptatibus minima accusamus libero illo, numquam laborum.
+                      Comunicate con el eShop al 4717-4404 de lunes a viernes de 8:00hs a 17:00hs.
+                      Escribinos por whatsapp al 1158481771 de lunes a sabado de 8:00hs a 22:00hs.
+                      Envianos tu CV a info@loboindumentaria.com.ar.
+                      Consultas por mayor comunícate con info@loboindumentaria.com.ar.
+                      Comunicate con la fabrica al 4717-4408 de lunes a viernes de 8:00hs a 17:00hs.
                     
                     </p>
                 </div>
